# ai-knowledge-bench

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements.txt  start.sh  validate.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py
apps/web_api/: Dockerfile  __init__.py  main.py
apps/worker_ingest/: Dockerfile  __init__.py  main.py
deploy/: docker-compose.yml  init-db.sh
docs/: china.md  design.md
eval/: golden_set_v1.jsonl
tests/: test_core.py
